Fix bug for paths contain '/' or "\\"